css/ntrn-strs-header.css
/*
===================================
header
===================================
 */
header{
    position: fixed;
    width: 100%;
    height: 64px;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-evenly;
    background-color: #361451;
    margin-bottom: 0;
}
@media only screen and (min-width: 360px) {
    header{
        position: fixed;
        width: 100%;
        height: 48px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        background-color: #361451;
        margin-bottom: 0;
    }
}
@media only screen and (min-width: 768px) {
    header{
        position: fixed;
        width: 100%;
        height: 64px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        background-color: #361451;
        margin-bottom: 0;
    }
}
@media only screen and (min-width: 1024px) {
    header{
        position: fixed;
        width: 100%;
        height: 68px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        background-color: #361451;
        margin-bottom: 0;
    }
}
@media only screen and (min-width: 1440px) {
    header{
        position: fixed;
        width: 100%;
        height: 64px;
        display: flex;
        flex-direction: row;
        align-items: flex-start;
        justify-content: center;
        background-color: #361451;
        margin-bottom: 0;
    }
}
@media only screen and (min-width: 2560px) {
    header{
        position: fixed;
        width: 100%;
        height: 120px;
        display: flex;
        flex-direction: row;
        align-items: flex-start;
        justify-content: space-around;
        background-color: #361451;
        margin-bottom: 0;
    }
}

header nav{}
header nav ul{
    list-style: none;
    margin: 24px 0 24px 0;
    padding: 24px 12px;
}
@media only screen and (min-width: 360px){
    header nav ul {
        align-items: flex-end;
        margin: 0;
        padding: 24px 12px;
    }
}
@media only screen and (min-width: 768px){
    header nav ul {
        align-items: flex-end;
        margin: 0;
        padding: 24px 36px 0 36px;
    }
}
@media only screen and (min-width: 1024px){
    header nav ul {
        align-items: flex-end;
        margin: 0;
        padding: 24px 48px 0 48px;
    }
}
@media only screen and (min-width: 1440px){
    header nav ul{
        display: flex;
    }
}
@media only screen and (min-width: 2560px){
    header nav ul{
        display: flex;
    }
}

@media only screen and (min-width: 1440px) {
    header nav ul img {
        margin: 0;
        padding: 0;
        width: 64px;
    }
}
@media only screen and (min-width: 2560px) {
    header nav ul img {
        margin: 0;
        padding: 0;
        width: 80px;
    }
}
header nav ul li{}
header nav ul li a:link,
header nav ul li a:visited,
header nav ul li a:active{
    font-family: 'Encode Sans Condensed';
    font-style: normal;
    font-weight: 700;
    /*font-size: 20px;*/
    color: #FBFBFB;
    /*margin-right: 160px;*/
    text-decoration: none;
}
header nav ul li a:hover{
    color: #52EDAC;
}
/*
===================================
toggle-alignment
===================================
 */
@media only screen and (min-width: 360px){
    .toggle-menu-alignment{
        padding: 0;
        margin: 8px 0 0 0;
    }
}
@media only screen and (min-width: 768px){
    .toggle-menu-alignment{
        padding: 0;
        margin: 16px 0 0 0;
    }
}
@media only screen and (min-width: 1024px){
    .toggle-menu-alignment{
        padding: 0;
        margin: 20px 0 0 0;
    }
}
/*
===================================
button | nav
===================================
 */
.nav-desktop {
    display: none;
}
.nav-mobile{
    display: flex;
    flex-direction: column;
}
.nav-mobile img{
    display: flex;
    flex-direction: column;
}
@media only screen and (min-width: 1440px){
    .nav-desktop,
    .toggle-menu{
        display: block;
    }
}
@media only screen and (min-width: 2560px){
    .nav-desktop,
    .toggle-menu{
        display: block;
    }
}
@media only screen and (min-width: 1440px){
    .nav-mobile,
    .nav-mobile img,
    .toggle-menu{
        display: none;
    }
    .nav-desktop{
        margin: auto;
        justify-content: center;
    }
    .nav-desktop-alignment{
        width: 960px;
        align-items: center;
        justify-content: space-between;
        margin: 0;
        padding: 0;
    }
}
@media only screen and (min-width: 2560px){
    .nav-mobile,
    .nav-mobile img,
    .toggle-menu{
        display: none;
    }
    .nav-desktop{
        margin: 20px 0 0 0;
        align-items: center;
    }
    .nav-desktop-alignment{
        width: 1600px;
        align-items: center;
        justify-content: space-between;
        margin: 0;
        padding: 0;
    }
}
@media only screen and (min-width: 360px){
    .nav-mobile img{
        width: 48px;
        height: 48px;
        float: left;
        display: block;
        position: absolute;
        left: 24px;
    }
    .nav-mobile{
        display: flex;
        flex-direction: column;
        width: 100%;
        justify-content: space-between;
    }
}
@media only screen and (min-width: 768px){
    .nav-mobile img{
        width: 60px;
        height: 60px;
        float: left;
        display: block;
        position: absolute;
        left: 40px;
    }
    .nav-mobile{
        display: flex;
        flex-direction: column;
        width: 100%;
        justify-content: space-between;
        align-items: center;
    }
}
@media only screen and (min-width: 1024px){
    .nav-mobile img{
        width: 60px;
        height: 60px;
        float: left;
        display: block;
        position: absolute;
        left: 48px;
    }
    .nav-mobile{
        display: flex;
        flex-direction: column;
        width: 100%;
        justify-content: space-between;
        align-items: center;
    }
}
@media only screen and (min-width: 1440px){
    .nav-mobile img{
        display: none;
    }
}
@media only screen and (min-width: 2560px){
    .nav-mobile img{
        display: none;
    }
}
/*
===================================
mobile menu content
===================================
 */
.mobile-menu-content {
    /*display: none;*/
    overflow: hidden;
    width: 100%;
    height: 100vh;
    background-color: #130834;
    padding: 12px 40px 0 40px;
    transform: translateX(100%);
    transition: all .75s ease-in-out;
    position: fixed;
    top: 0;
    left: 0;
}
@media only screen and (min-width: 1440px){
    .mobile-menu-content{
        display: none;
    }
}
@media only screen and (min-width: 2560px){
    .mobile-menu-content{
        display: none;
    }
}
/*
===================================
mobile bg circle shapes
===================================
 */
@media only screen and (min-width: 360px) {
    .nav-mobile-bg-shapes{
        background-image: url("../img/nav_mobile_bg_circles.svg");
        background-position: bottom 0 left 0;
        background-size: 900px;
        background-repeat: no-repeat;
        z-index: -3;
    }
}
@media only screen and (min-width: 768px) {
    .nav-mobile-bg-shapes{
        background-image: url("../img/nav_mobile_bg_circles.svg");
        background-position: bottom 0 left 0;
        background-size: 1024px;
        background-repeat: no-repeat;
        z-index: -3;
    }
}
@media only screen and (min-width: 1024px) {
    .nav-mobile-bg-shapes{
        background-image: url("../img/nav_mobile_bg_circles.svg");
        background-position: bottom -200px left 0;
        background-size: 1440px;
        background-repeat: no-repeat;
        z-index: -3;
    }
}
.mobile-menu-content-transition{
    transform: translateX(0%);
}
.mobile-menu-content-display{
    display: none;
}
/*
===================================
mobile menu textblock
===================================
 */
.mobile-menu-textblock{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 12px;
    margin: 0 0 48px 0;
}
@media only screen and (min-width: 360px) {
    .mobile-menu-textblock{
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 12px;
        margin: 20px 0 48px 0;
    }
}
@media only screen and (min-width: 768px) {
    .mobile-menu-textblock{
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 12px;
        margin: 40px 0 48px 0;
    }
}
@media only screen and (min-width: 1024px) {
    .mobile-menu-textblock{
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 12px;
        margin: 60px 0 48px 0;
    }
}

